# selfstudyai

backend/selfstudyai/: .env  Cargo.toml
backend/selfstudyai-api/: Cargo.toml
backend/selfstudyai-api/src/: main.rs
backend/selfstudyai-api/src/dto/: auth.rs  document.rs  mod.rs
backend/selfstudyai-api/src/entities/: document.rs  document_chunk.rs  mod.rs  quiz.rs  quiz_attempt.rs  user.rs
backend/selfstudyai-api/src/middleware/: auth.rs
backend/selfstudyai-api/src/migrations/: m20240101_000001_create_users_table.rs  m20240102_000002_create_documents_table.rs  m20240102_000003_create_document_chunks_table.rs  m20240103_000004_create_quizzes_table.rs  m20240103_000005_create_quiz_attempts_table.rs  mod.rs
backend/selfstudyai-api/src/routes/: auth.rs  document.rs
backend/selfstudyai-api/src/services/: auth.rs  document.rs  embeddings.rs  mod.rs  pdf.rs  vector_db.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/components/auth/: login-form.tsx  protected-route.tsx  register-form.tsx
frontend/components/documents/: document-list.tsx  file-upload.tsx
frontend/components/layout/: navbar.tsx
frontend/components/providers/: auth-provider.tsx
frontend/components/search/: search-bar.tsx  search-results.tsx
frontend/components/ui/: card.tsx  select.tsx
frontend/lib/api/: auth.ts  document.ts
frontend/lib/services/: blob-service.ts
frontend/lib/store/: auth-store.ts  document-store.ts  search-store.ts
frontend/lib/types/: auth.ts  document.ts
(+2 files in other folders)
