[package]
name = "selfstudyai-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors"] }

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing
argon2 = "0.5"

# JWT tokens - FIX: Add crypto feature
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto", "use_pem"] }


# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# PDF Processing
lopdf = "0.38.0"

# HTTP Client (for downloading from Vercel Blob)
reqwest = { version = "0.12.24", features = ["json", "stream"] }
bytes = "1.5"